# shift_yourself_left

./: .gitignore  LICENSE  README.md  compose.yml  run.sh
.github/workflows/: test.yml
app/: Dockerfile  pyproject.toml  requirements.txt
app/recipes/: database.py  main.py  models.py  schemas.py
app/tests/: test_recipes.py
app_tests/: Dockerfile  pyproject.toml
app_tests/tests/: test_recipes.py
ingest/: Dockerfile  ingest.py  pyproject.toml  requirements.txt
integration_tests/: Dockerfile  docker-compose.yml  requirements.txt  run.sh  start_web.sh
integration_tests/tests/: test_recipes.py
pipeline/: Dockerfile  ingest.py  requirements.txt  run_all.sh
pipeline/models/: recipe_stats.sql  recipes.sql  sources.yml
transform/: Dockerfile  dbt_project.yml  profiles.yml  pyproject.toml  requirements.txt
transform/models/: recipe_stats.sql  sources.yml
transform/tests/: test_recipe_stats.sql
