[project]
name = "app"
version = "0.1.0"
description = "Example web app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.12.1",
    "cryptography==41.0.5",
    "fastapi==0.104.1",
    "httpx==0.25.1",
    "pydantic==2.4.2",
    "pymysql==1.1.0",
    "pytest==7.4.3",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.23",
    "uvicorn==0.24.0",
]
