[project]
name = "app"
version = "0.1.0"
description = "Example web app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic",
    "cryptography",
    "fastapi",
    "httpx",
    "pydantic",
    "python-dotenv",
    "sqlalchemy",
    "uvicorn",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
